<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_tf_micromouse</name>
  <version>1.0.0</version>
  <description>Runs Micromouse Simulation</description>
  <maintainer email="animesh.ani@live.com">ANI717 (Animesh Bala Ani)</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2_robot_simulation</depend>
  <depend>ros2_world_simulation</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
